--- a/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Views/inicio/inicio.cshtml
+++ b/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Views/inicio/inicio.cshtml
@@ -9,9 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicia Sesión</title>
     <link href="~/Assets/Lib/bootstrap5/bootstrap.css" rel="stylesheet" />
-    <style>
-      
-    </style>
+    <link href="~/Assets/css/Layout.css" rel="stylesheet" />
+    <script>
+         var RutaPrincipal = "@Url.Content("~")";
+    </script>
 </head>
 <body>
 
@@ -37,12 +38,12 @@
                             <p class="parrafo">Escribe tus datos para entrar al sistema de votación</p>
                         </div>
                         <div class="form-group mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
-                            <input type="email" class="form-control formulario-inicio" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <label for="txemail" class="form-label">Correo electrónico</label>
+                            <input type="email" class="form-control formulario-inicio" id="txemail">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="password">Contraseña</label>
-                            <input type="password" class="form-control formulario-inicio" id="password">
+                            <label for="txpassword">Contraseña</label>
+                            <input type="password" class="form-control formulario-inicio" id="txpassword">
                         </div>
                     </div>
                 </div>
@@ -53,7 +54,7 @@
                 </div>
                 <div class="row align-items-center justify-content-center mt-4">
                     <div class="col-md-5 text-center">
-                        <input value="Ingresar" class="btn btn-inicio">
+                        <button id="btniniciar" class="btn btn-inicio">Ingresar</button>
                     </div>
                 </div>
                 <div class="row align-items-center justify-content-center mt-4">
@@ -65,6 +66,135 @@
         </div>
     </div>
 
+    <div id="fnCarga">
+        <div class="divLoader" id="divcarga">
+            <div class="loader">
+                <svg viewBox="0 0 80 80">
+                    <circle id="test" cx="40" cy="40" r="32"></circle>
+                </svg>
+            </div>
+        </div>
+    </div>
+
     <script src="~/Assets/Lib/bootstrap5/bootstrap.bundle.js"></script>
+    <script src="~/Assets/Lib/momentjs/moment.js"></script>
+    <script src="~/Assets/Lib/jquery/jquery.js"></script>
+    <input type="hidden" id="data-ivalorsesion" value="@ViewBag.GIvalorSesion" />
+    <input type="hidden" id="idvalorerror" value="@ViewBag.GIvalorError" />
+    <script>
+        $(document).ready(function () {
+            fnOcultarLoader();
+        });
+
+        function fnMostrarLoader() {
+            $('#fnCarga').css("display", "block");
+        }
+
+        function fnOcultarLoader() {
+            $('#fnCarga').css("display", "none");
+        }
+
+        var Givalorsesion = $('#data-ivalorsesion').val();
+        if (Givalorsesion == 1) {
+            alert("La sesión ha terminado, por favor ingrese nuevamente sus credenciales.")
+        }
+        
+        $(document).on('keypress', function (e) {
+           
+            if (e.which == 13) {
+                var ipUsuario = $('#txemail').val();
+                var ipClave = $('#txpassword').val();
+                if (ipUsuario.trim() == "") {
+                    fnOcultarLoader();
+                    alert("INGRESAR SU USUARIO");
+                    return;
+                }
+                if (ipClave.trim() == "") {
+                    fnOcultarLoader();
+                    alert("INGRESE SU CLAVE");
+                    return;
+                }
+                fnMostrarLoader();
+                $.ajax({
+                    type: "POST",
+                    url: RutaPrincipal + 'Inicio/IniciarSesion',
+                    data: {
+                        "wusuario": ipUsuario,
+                        "wclave": ipClave
+                    },
+                    async: true,
+                    success: function (msg) {
+                        if (msg.iResultado === -3) {
+                            alert("USUARIO O CLAVE INCORRECTO");
+                            fnOcultarLoader();
+                            return;
+                        } else {
+                            if (msg.iResultado == 3) {
+                                window.location.href = RutaPrincipal + "Inicio/principal";
+                            } else {
+                                window.location.href = RutaPrincipal + "Inicio/principal";
+                            }
+
+                        }
+                    },
+                    error: function (msg) {
+
+                        //location.reload();
+                    },
+                    complete: function (data) {
+                        // si acabo de completar
+                    }
+                });
+            }
+        });
+
+        $("#btniniciar").click(function () {
+            var ipUsuario = $('#txemail').val();
+            var ipClave = $('#txpassword').val();
+            if (ipUsuario.trim() == "") {
+                fnOcultarLoader();
+                alert("INGRESAR SU USUARIO");
+                return;
+            }
+            if (ipClave.trim() == "") {
+                fnOcultarLoader();
+                alert("INGRESE SU CLAVE");
+                return;
+            }
+            fnMostrarLoader();
+            $.ajax({
+                type: "POST",
+                url: RutaPrincipal + 'Inicio/IniciarSesion',
+                data: {
+                    "wusuario": ipUsuario,
+                    "wclave": ipClave
+                },
+                async: true,
+                success: function (msg) {
+                    if (msg.iResultado === -3) {
+                        alert("USUARIO O CLAVE INCORRECTO");
+                        fnOcultarLoader();
+                        return;
+                    } else {
+                        if (msg.iResultado == 3) {
+                            window.location.href = RutaPrincipal + "Inicio/principal";
+                        } else {
+                            window.location.href = RutaPrincipal + "Inicio/principal";
+                        }
+
+                    }
+                },
+                error: function (msg) {
+
+                    //location.reload();
+                },
+                complete: function (data) {
+                    // si acabo de completar
+                }
+            });
+
+        });
+
+    </script>
 </body>
 </html>
