--- a/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Views/inicio/perfil.cshtml
+++ b/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Views/inicio/perfil.cshtml
@@ -38,7 +38,7 @@
         <p>@ViewBag.VBCorreo</p>
     </div>
     <div class="col-md-2">
-        <a href="#">Editar</a>
+        @*<a href="#">Editar</a>*@
     </div>
 
     <div class="col-md-4">
@@ -48,7 +48,7 @@
         <p>*************</p>
     </div>
     <div class="col-md-2">
-        <a href="#">Editar</a>
+        @*<a href="#">Editar</a>*@
     </div>
 </div>
 
